# VT.ai

./: .chainlit  .env.example  .gitignore  404.html  AGENT.md  BYOK_FIX_SUMMARY.md  BYOK_SECURITY_SUMMARY.md  CHANGELOG.md  MANIFEST.in  README.md  SECURITY.md  TODO  USER_PROFILE_IMPLEMENTATION.md  build_docs.sh  byok_fix_validation.py  chainlit.md  deploy_docs.sh  index.html  llms.txt  mkdocs.yml  objects.inv  package-lock.json  package.json  pyproject.toml  release.py  requirements.txt  ruff.toml  run_app.py  run_mcp_server.sh  run_vtai_app.sh  semantic_route_layers.json  sitemap.xml  test_byok_complete_flow.py  test_byok_functionality.py  test_byok_functionality_simple.py  test_byok_simple.py  test_byok_user_env.py  test_user_profile.py  test_user_profile_minimal.py
.chainlit/: config.toml
.chainlit/translations/: bn.json  el-GR.json  en-US.json  es.json  fr-FR.json  gu.json  he-IL.json  hi.json  ja.json  kn.json  ml.json  mr.json  nl.json  ta.json  te.json  zh-CN.json  zh-TW.json
.github/: FUNDING.yml  copilot-instructions.md  dependabot.yml
.github/workflows/: pylint.yml  pypi_pip_publish.yml
api/: index.html
api/app/: index.html
api/assistants/: index.html
api/router/: index.html
api/utils/: index.html
auth_page/: package.json  postcss.config.mjs  tailwind.config.js  tsconfig.json
auth_page/components/: forgot-password-form.tsx  login-form.tsx  logout-button.tsx  sign-up-form.tsx  update-password-form.tsx
auth_page/pages/: _app.tsx  protected.tsx
developer/architecture/: index.html
developer/extending/: index.html
developer/mcp/: index.html
developer/models/: index.html
developer/routing/: index.html
developer/rust-implementation/: index.html
developer/tools/: index.html
docs/: index.md  litellm-supabase-logging.md  llms.txt  mkdocs.yml  production-ready-summary.md  user-request-analytics.md
docs/api/: app.md  assistants.md  index.md  router.md  utils.md
docs/dev/: TY_ADOPTION.md
docs/developer/: architecture.md  extending.md  litellm_token_tracking.md  mcp.md  models.md  oauth-implementation-report.md  oauth-testing-guide.md  request_logs_implementation.md  routing.md  rust-implementation.md  supabase_integration.md  supabase_migration.md  token_tracking_fix_summary.md  token_tracking_removal.md  token_tracking_simplification.md  token_tracking_troubleshooting.md  token_usage_monitoring.md  tools.md
docs/user/: configuration.md  features.md  getting-started.md  models.md  security.md  troubleshooting.md
examples/: gpt_image_1_advanced_example.py  litellm_supabase_example.py  litellm_supabase_standalone.py  mcp_demo.py  test_callback_integration.py  test_enhanced_cost_demo.py  test_enhanced_cost_tracking.py  test_integration_with_session.py  test_real_user_integration.py  test_simplified_system.py  test_supabase_logging.py  test_user_analytics.py  voice_conversation.py
examples/prompts/: gpt_image_1_prompt_guide.md
mcp_server/: README.md  mcp_config.py  requirements.txt  server.py
public/: auth-bridge.js  auth-redirect.js  realtime-voice.js  theme.json
public/elements/: UserProfile.jsx
rust-vtai/: Cargo.toml  README.md  run.sh
rust-vtai/src/: main.rs
rust-vtai/src/app/: chat.rs  handlers.rs  server.rs  settings.rs
rust-vtai/src/assistants/: anthropic.rs  cohere.rs  deepseek.rs  gemini.rs  manager.rs  mistral.rs  mod.rs  openai.rs  run.rs  thread.rs
rust-vtai/src/router/: constants.rs  default_handlers.rs  encoder.rs  handler.rs  mod.rs  route.rs  semantic.rs
rust-vtai/src/tools/: code.rs  code_interpreter.rs  file.rs  file_processor.rs  mod.rs  registry.rs  search.rs  tavily.rs
rust-vtai/src/utils/: config.rs  constants.rs  error.rs  logger.rs  mod.rs  models.rs  models_map.rs
rust-vtai/static/: index.html
scripts/: build_docs.sh  check_supabase_schema.py  create_request_logs_table.py  debug_litellm_callbacks.py  deploy_docs.sh  deploy_llms_txt.py  fix_litellm_callbacks.py  get_supabase_policy_sql.py  install_and_run.bat  install_and_run.sh  migrate_remove_usage_logs.py  minimal_test.py  release.py  run_mcp_server.sh  run_vtai_api.sh  run_vtai_app.sh  run_vtai_frontend.sh  run_vtai_server.sh  setup_request_logs.py  setup_supabase.py  test_connectivity.sh  test_enhanced_litellm_callbacks.py  test_fixed_callbacks.py  test_litellm_callbacks.py  type-check.sh  update_request_logs_rls.py  update_supabase_policies.py  update_token_tracking_policies.py  validate_token_tracking.py  verify_token_tracking_fix.py  vtai_runner.py
search/: search_index.json
site/: llms.txt
src/: app.py
src/router/: constants.py  layers.json  trainer.py
src/utils/: assistant_tools.py  chat_profile.py  config.py  constants.py  conversation_handlers.py  dict_to_object.py  error_handlers.py  file_handlers.py  llm_config.py  llm_profile_builder.py  llm_settings_config.py  media_processors.py  settings_builder.py  url_extractor.py  user_session_helper.py
src/vtai/: app.py  chainlit_user_session_helper.py  config.py  constants.py  llm_profile_builder.py  llms_config.py  semantic_route_layers.json  semantic_router_trainer.py
tests/: README.md  conftest.py
tests/integration/: test_credits_chainlit_flow.py  test_credits_integration.py  test_router.py
tests/unit/: test_config.py  test_conversation_handlers.py  test_credits.py  test_media_processors.py
user/configuration/: index.html
user/features/: index.html
user/getting-started/: index.html
user/models/: index.html
user/troubleshooting/: index.html
vtai/: __init__.py  app.py  cli.py  main.py  server.py  webhooks.py
vtai-frontend/: .env.local  README.md  index.html  package-lock.json  package.json  vite.config.ts
vtai-frontend/public/: check.html  hello.html  simple-chat.html  test.html
vtai-frontend/src/: App.tsx  index.css  main.tsx
vtai-server/src/: api.py  simple_api.py
vtai/.chainlit/: config.toml
vtai/assistants/: manager.py
vtai/router/: constants.py  layers.json  trainer.py
vtai/tools/: __init__.py  search.py
vtai/utils/: __init__.py  api_compatibility.py  api_keys.py  assistant_tools.py  async_utils.py  auth_handler.py  auth_ui.py  (+26 more)
(+39 files in other folders)
