[project]
name = "vtai"
version = "0.7.4"
description = " VT.ai - Minimal multimodal AI chat app with dynamic conversation routing "
authors = [{ name = "Vinh Nguyen" }]
dependencies = [
    "chainlit==2.10.1",
    "litellm==1.83.0",  # Pinned to avoid malicious versions 1.82.7, 1.82.8 (supply chain attack)
    "openai==2.30.0",
    "pydantic==2.12.5",  # Specific version due to compatibility issues with chainlit
    "python-dotenv==1.2.2",
    "semantic-router[fastembed]==0.1.12",
    "pillow==10.4.0",
    "google-generativeai==0.8.6",
    "tavily-python==0.7.23",
    "httpx==0.28.1",
]
readme = "README.md"
requires-python = ">= 3.11"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Development Status :: 4 - Beta",
]

[project.urls]
"Homepage" = "https://github.com/vinhnx/VT.ai"
"Bug Tracker" = "https://github.com/vinhnx/VT.ai/issues"

[project.scripts]
vtai = "vtai.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["vtai"]

[dependency-groups]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "ruff==0.15.8",
    "twine==6.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "twine==6.2.0",
    "black==26.3.1",
    "isort==7.0.0",
    "flake8==7.3.0",
]

docs = ["mkdocs-llmstxt>=0.2.0"]

http2 = ["h2>=4.1.0", "httpx[http2]>=0.26.0"]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    "./vtai/utils/llm_providers_config.py",
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 100
indent-width = 4

# Assume Python 3.9
target-version = "0.7.4"

[tool.ruff.lint]
# 1. Enable flake8-bugbear (`B`) rules, in addition to the defaults.
select = ["E4", "E7", "E9", "F", "B"]

# 2. Avoid enforcing line-length violations (`E501`)
ignore = ["E501"]

# 3. Avoid trying to fix flake8-bugbear (`B`) violations.
unfixable = ["B"]


# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"
