[package]
name = "rust-vtai"
version = "0.1.0"
edition = "2021"
authors = ["Vinh Nguyen"]
description = "VT.ai - Minimal multimodal AI chat app with dynamic conversation routing (Rust version)"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Web framework - equivalent to Chainlit's web interface
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }

# Serialization/Deserialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# OpenAI client - for OpenAI API integration
async-openai = "0.16"

# Configuration
dotenv = "0.15"
config = "0.13"
dirs = "5.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1"
anyhow = "1"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# File operations
tempfile = "3"

# Utils
chrono = "0.4"
uuid = { version = "1", features = ["v4", "serde"] }
once_cell = "1"
regex = "1"
futures = "0.3"

# Web content
handlebars = "4"
markup = "0.15"

# For CLI
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
mockall = "0.12"
tokio-test = "0.4"
tempfile = "3"

[[bin]]
name = "vtai"
path = "src/main.rs"
